[package]
name = "pmlang"
description = "Core of Parsec Math Language (PMLang)"
version = "0.0.3"
edition = "2024"
license = "MIT"
authors = [
    "Naylour <naylour.developer@ya.ru>",
    "ParsecLab"
]
readme = "README.md"
homepage = "https://github.com/ParsecLab/pmlang.git"
repository = "https://github.com/ParsecLab/pmlang.git"
keywords = ["math", "language", "parsec", "dsl", "wasm"]
categories = ["science", "mathematics", "wasm", "data-structures"]
publish = true

include = [
    "assets/**",
    "src/**",
    "Cargo.toml",
    "README.md"
]

[lib]
name = "pmlang"
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"
once_cell = "1.19"
wasm-bindgen = { version = "0.2", optional = true }


[dev-dependencies]


[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen"]
